--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <p class="parrafoHome">14.10.25 | Buenos Aires | Argentina</p>
         </div>
         <div class="subcontainerHome">
-            <h2 class="subtitulo">La pagina esta en reparacion,<br> estara disponible a partir del <br> 1.10.2024</h2>
+            <h2 class="subtitulo">La página esta en reparación,<br> estará disponible a partir del <br> 1.10.2024</h2>
 
-            <p class="subparrafoHome">Para mas informacion, comunicate a 
+            <p class="subparrafoHome">Para más información, comunicate a 
                 <br class="brbtn">
                 <a class="btnMail" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
         </div>
