--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p class="parrafoHome">14.10.25 | Buenos Aires | Argentina</p>
         </div>
         <div class="subcontainerHome">
-            <h2 class="subtitulo">La página esta en reparación,<br> estará disponible a partir del <br> 1.10.2024</h2>
+            <h2 class="subtitulo">La página está en reparación,<br> estará disponible a partir del <br> 1.10.2024</h2>
 
             <p class="subparrafoHome">Para más información, comunicate a 
                 <br class="brbtn">
